# nhentai

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  ruff.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  test.yml
api/: index.html
api/cdn/: index.html
api/downloader/: index.html
api/enums/: index.html
api/grabber/: index.html
api/nhentai/: index.html
api/parser/: index.html
api/translator/: index.html
changelog/: index.html
docs/: changelog.md  getting-started.md  index.md
docs/api/: cdn.md  downloader.md  enums.md  grabber.md  index.md  nhentai.md  parser.md  translator.md
getting-started/: index.html
nhentai/: __init__.py  cdn.py  cli.py  downloader.py  enums.py  grabber.py  nhentai.py  parser.py  translator.py
nhentai/providers/: __init__.py  base.py  comic.py  neko.py
search/: search_index.json
tests/: test_cdn.py  test_cli.py  test_comic.py  test_downloader.py  test_downloader_extended.py  test_enums.py  test_grabber.py  test_nhentai.py  test_parser.py  test_translator.py
